syntax = "proto3";

option go_package="proto/todo"; // where will the out file will be built

service Todo {
    rpc createTodo(CreateTodoRequest) returns (TodoItem);
    rpc getTodos(noparams) returns (TodoItems);
    rpc trialTodo(noparams) returns (TodoItem);
    rpc getTodosStream(noparams) returns (stream TodoItem);
    rpc getFileDownload(noparams) returns (stream TypeFileDownload);
    // rpc uploadFile(stream TypeFileUploadRequest) returns (noparams);
}

message CreateTodoRequest {
    string text = 1;  // Text content of the todo item
}

message TodoItem {
    int32 id = 1;
    string title = 2;
    bool completed = 3;
    bool trialTodo = 4;
}

// give all todo items as an array of items
message TodoItems {
    repeated TodoItem todoItems = 1;
}

message noparams {}

message TypeFileUploadRequest {
    string folderName = 1;
    string filename = 2;
    bytes chunk = 3;
}

message TypeFileDownload {
    string filename = 1;
    bytes chunk = 2;
}